test/bad/generators/generic01.px

func* f() def
    yield 1
    yield true

f()
